[package]
name = "bookrack-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-query = { path = "../query" }
bookrack-config = { path = "../config" }
bookrack-core = { path = "../core" }
bookrack-embed = { path = "../embed" }
bookrack-obs = { path = "../obs" }
bookrack-ops = { path = "../ops" }
bookrack-catalog = { path = "../catalog" }
bookrack-runtime = { path = "../runtime" }
bookrack-session = { path = "../session" }
rmcp.workspace = true
axum.workspace = true
# `BroadcastStream` adapter to fan the LogStreamHandle broadcast
# receiver into an axum SSE response for the /session/logs endpoint.
# Re-exports the `Stream` trait so no separate `futures` dep is needed
# at the listener layer.
tokio-stream.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
