[package]
name = "bookrack-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-extract = { path = "../extract" }
bookrack-catalog = { path = "../catalog" }
bookrack-audit-profile.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
