[package]
name = "bookrack-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-catalog = { path = "../catalog" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-embed = { path = "../embed" }
bookrack-query = { path = "../query" }
bookrack-search = { path = "../search" }
bookrack-vectors = { path = "../vectors" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
