[package]
name = "bookrack-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-catalog = { path = "../catalog" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-embed = { path = "../embed" }
bookrack-ingest = { path = "../ingest" }
bookrack-query = { path = "../query" }
bookrack-search = { path = "../search" }
bookrack-vectors = { path = "../vectors" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true

[dev-dependencies]
bookrack-extract = { path = "../extract" }
tokio.workspace = true
tempfile.workspace = true
