[package]
name = "bookrack-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-embed = { path = "../embed" }
bookrack-search = { path = "../search" }
bookrack-vectors = { path = "../vectors" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
bookrack-extract = { path = "../extract" }
bookrack-ingest = { path = "../ingest" }
tokio.workspace = true
tempfile.workspace = true
