[package]
name = "bookrack-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-catalog = { path = "../catalog" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-embed = { path = "../embed" }
bookrack-search = { path = "../search" }
bookrack-vectors = { path = "../vectors" }
bookrack-ingest = { path = "../ingest" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
bookrack-extract = { path = "../extract" }
bookrack-config = { path = "../config" }
tokio.workspace = true
tempfile.workspace = true
