[package]
name = "bookrack-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-catalog = { path = "../catalog" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-embed = { path = "../embed" }
bookrack-normalize = { path = "../normalize" }
bookrack-search = { path = "../search" }
bookrack-vectors = { path = "../vectors" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
bookrack-extract = { path = "../extract" }
bookrack-config = { path = "../config" }
bookrack-ingest = { path = "../ingest" }
tempfile.workspace = true
