[package]
name = "bookrack-refs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Centralised SQLite open path: WAL + busy timeout for read-write
# handles, query-only / strict read-only variants for read consumers.
bookrack-dbkit = { path = "../dbkit" }
rusqlite.workspace = true
rusqlite_migration.workspace = true
# `Value` round-trips for `payload_json` / `source_json` / overlay
# patches; `from_str` for view-side projection back into typed structs.
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
