[package]
name = "bookrack-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-audit-profile = { path = "../audit-profile" }
bookrack-catalog = { path = "../catalog" }
bookrack-config = { path = "../config" }
bookrack-control-client = { path = "../control-client" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-diagnose = { path = "../diagnose" }
bookrack-embed = { path = "../embed" }
bookrack-ingest = { path = "../ingest" }
bookrack-metadata = { path = "../metadata" }
bookrack-obs = { path = "../obs" }
bookrack-ops = { path = "../ops" }
bookrack-query = { path = "../query" }
bookrack-repl-grammar = { path = "../repl-grammar" }
bookrack-session = { path = "../session" }
bookrack-vectors = { path = "../vectors" }
anyhow.workspace = true
# `wizard::WizardDriver` exposes async methods behind a dyn-safe trait.
async-trait.workspace = true
chrono.workspace = true
# `cmd::libraries::CopyMode` and `cmd::audit_profile::AuditProfileAction`
# derive clap traits so the cli `bin` consumes them directly. The
# runtime crate hosts those definitions and re-exports the derives;
# `cmd::metadata::WriteMetadataAction` lives in `bookrack-repl-grammar`
# and is re-exported through `cmd::metadata`.
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
# `cmd::dryrun` hashes file contents to name per-book JSONL outputs.
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
ts-rs.workspace = true
