[package]
name = "bookrack-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-audit-profile = { path = "../audit-profile" }
bookrack-catalog = { path = "../catalog" }
bookrack-config = { path = "../config" }
bookrack-control-client = { path = "../control-client" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-dbkit = { path = "../dbkit" }
bookrack-diagnose = { path = "../diagnose" }
bookrack-embed = { path = "../embed" }
bookrack-rerank = { path = "../rerank" }
bookrack-index-profile = { path = "../index-profile" }
# `pdfium_install` reads the pinned-binary constants published next to
# the PDF adapter that consumes the library.
bookrack-extract = { path = "../extract" }
bookrack-glean = { path = "../glean" }
bookrack-ingest = { path = "../ingest" }
bookrack-metadata = { path = "../metadata" }
bookrack-obs = { path = "../obs" }
bookrack-ops = { path = "../ops" }
bookrack-query = { path = "../query" }
bookrack-cli-grammar = { path = "../cli-grammar" }
bookrack-session = { path = "../session" }
bookrack-vectors = { path = "../vectors" }
eyre.workspace = true
# `wizard::WizardDriver` exposes async methods behind a dyn-safe trait.
async-trait.workspace = true
chrono.workspace = true
# `cmd::libraries::CopyMode` and `cmd::audit_profile::AuditProfileAction`
# derive clap traits so the cli `bin` consumes them directly. The
# runtime crate hosts those definitions and re-exports the derives;
# `cmd::metadata::WriteMetadataAction` lives in `bookrack-cli-grammar`
# and is re-exported through `cmd::metadata`.
clap.workspace = true
# `pdfium_install` downloads the pinned PDFium archive over HTTPS and
# unpacks it (gzip + tar) into the managed directory.
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
# `cmd::dryrun` hashes file contents to name per-book JSONL outputs;
# `pdfium_install` verifies the downloaded archive against its pin.
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
# The rerank supervisor's typed spawn/readiness error family.
thiserror.workspace = true
# `process`/`io-util` drive the supervised llama-server subprocess and
# its log piping; `time` the readiness polls and restart backoff;
# `sync` the supervisor's shared state.
tokio = { workspace = true, features = ["process", "time", "io-util", "sync"] }
tracing.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
# Soft-RLIMIT_NOFILE raise at daemon startup, mirrored by a doctor row.
rustix.workspace = true

[dev-dependencies]
tempfile.workspace = true
ts-rs.workspace = true
