[package]
name = "bookrack-vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-core = { path = "../core" }
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
# A tokio runtime to drive the async tests, and a temp dir per test so
# the on-disk LanceDB store is isolated and cleaned up.
tokio.workspace = true
tempfile.workspace = true
