[package]
name = "bookrack-vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-core = { path = "../core" }
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
# A tokio runtime to drive the async tests; tempfile is in [dependencies]
# because vectors_meta.json uses NamedTempFile for atomic rename.
tokio.workspace = true
